# real-world-marlowe

./: .gitignore  ExecuteRaffle.hs  InitializeRaffle.hs  MintPrizeTokens.hs  ReadMe.md  evan-loan-1.txBody  evan-loan.ipynb  flake.nix  mainnet.env  narrative-instructions.ipynb  preprod.env  preview.env  raffle-narrative.ipynb  run-raffle.ipynb
archives/: ReadMe.md
archives/raffle/: .gitignore  ExecuteRaffle.hs  ReadMe.md  build.sh  flake.nix  raffle.cabal
archives/raffle/app/: Common.hs  ExecuteRaffle.hs  InitializeRaffle.hs  Tools.hs  Types.hs
archives/raffle/example/: .gitignore  ReadMe.md  blank-run-raffle.ipynb  hierarchy.dot  narrative-instructions.ipynb  run-raffle.ipynb
archives/raffle/nix/: iogx-config.nix  per-system-outputs.nix  shell.nix
defi/beamer/: ReadMe.ipynb  beamer-1.marlowe  beamer-1.state  beamer-2.marlowe  beamer-3.marlowe  beamer-4.marlowe
docs/: CNAME  controller.js  index.html  view.css
dramatis-personae/: .gitignore  Mint.ipynb  Query.ipynb  Tokens.ipynb  c.marlowe.mainnet.address  c.marlowe.testnet.address  e.cary.mainnet.address  e.cary.testnet.address  f.beaumont.mainnet.address  f.beaumont.testnet.address  faucet.mainnet.address  faucet.testnet.address  j.lumley.mainnet.address  j.lumley.testnet.address  j.webster.mainnet.address  j.webster.testnet.address  m.herbert.mainnet.address  m.herbert.testnet.address  metadata.json  roles.env  theatres.json  w.shakespeare.mainnet.address  w.shakespeare.testnet.address
inputs/: configuration.json
loan/: evan-loan-1.marlowe  evan-loan.contract  evan-loan.state
(+114 files in other folders)
